--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <title>Translator App</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='grad' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%2310b981;stop-opacity:1' /><stop offset='100%' style='stop-color:%23059669;stop-opacity:1' /></linearGradient></defs><circle cx='50' cy='50' r='45' fill='url(%23grad)'/><text x='50' y='60' font-family='Arial' font-size='40' fill='white' text-anchor='middle'>🌐</text></svg>" />
+    <title>Universal Translator - Break Language Barriers</title>
+    <meta name="description" content="Universal Translator - Break language barriers with instant, accurate translations powered by AI. Support for 100+ languages." />
   </head>
   <body>
     <div id="root"></div>
